part1/1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapp
  template:
    metadata:
      labels:
        app: mainapp
    spec:
      volumes:
        - name: shared-mainapp
          emptyDir: {}
      containers:
        - name: mainapp-gen
          image: heseduud/mainapp-gen:1.10
          volumeMounts:
            - name: shared-mainapp
              mountPath: /usr/src/app/files
        - name: mainapp-read
          image: heseduud/mainapp-read:1.10v2
          volumeMounts:
            - name: shared-mainapp
              mountPath: /usr/src/app/files
